# rigx

./: .gitignore  .gitingore  LICENSE.md  README.md  README.md~  TODO.md  flake.nix  pyproject.toml  rigx.toml
.github/workflows/: ci.yml
example-project/: .gitignore  pyproject.toml  rigx.toml  x86cap.qcow2
example-project/src/: gen_greeting.cpp  greet.py  hello.c  hello.go  hello.nim  hello.rs  hello.zig  main.cpp
example-project/testbeds/: notes_demo.py
procton/: __main__.py  builder.py  cli.py  config.py  nix_gen.py
project/: procton.toml
project/include/: greet.h
project/src/: greet.cpp
rigx/: __init__.py  __main__.py  builder.py  capsule.py  cli.py  config.py  fmt.py  graph.py  nix_gen.py  scaffold.py  sources.py  testbed.py
rigx/commands/: __init__.py  build.py  clean.py  flake_cmd.py  fmt_cmd.py  graph_cmd.py  helpers.py  list_cmd.py  lock.py  ls_source.py  new.py  pkg.py  run_cmd.py  test_cmd.py  version_cmd.py  watch.py
rigx/nix/: __init__.py  c_family.py  capsule_common.py  capsule_lite.py  capsule_nixos.py  capsule_qemu.py  cross.py  flake.py  go.py  nim.py  python.py  render.py  rust.py  tests.py  zig.py
tests/: __init__.py  test_builder.py  test_capsule_config.py  test_capsule_helper.py  test_cli.py  test_config.py  test_features.py  test_graph.py  test_nix_gen.py  test_sources.py  test_testbed.py  test_volumes_expose_testbed.py
tutorial/: README.md  package-lock.json  package.json  tsconfig.json
tutorial/src/: Root.tsx  Video.tsx  components.tsx  content.ts
