[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "procton"
version = "0.1.0"
description = "A Nix-backed declarative build system"
requires-python = ">=3.11"
authors = [{ name = "Massimo Di Pierro" }]

[project.scripts]
procton = "procton.cli:main"

[tool.setuptools.packages.find]
include = ["procton*"]
