[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rigx"
version = "0.6.2"
description = "A Nix-backed declarative build system"
requires-python = ">=3.11"
authors = [{ name = "Massimo Di Pierro" }]
license = "BSD-2-Clause"
license-files = ["LICENSE.md"]

[project.scripts]
rigx = "rigx.cli:main"

[tool.setuptools.packages.find]
include = ["rigx*"]
